k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-lab-application
  labels:
    app: gcp-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gcp-lab
  template:
    metadata:
      labels:
        app: gcp-lab
    spec:
      containers:
      - name: whoami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.9
        ports:
        - containerPort: 8080
