k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcp-lab-service
spec:
  type: NodePort
  selector:
    app: gcp-lab
  ports:
    - name: gcp-lab-port
      protocol: TCP
      port: 80
      targetPort: 80
